# TinySQL

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: setupGitHooks.sh
scripts/hooks/: post-commit  prepare-commit-msg
src/: enums.hpp  flags.cpp  flags.hpp  main.cpp
src/parser/: ast.cpp  ast.hpp  lexer.l  parser.y
src/repl/: repl.cpp  repl.hpp
src/utils/: stringUtils.cpp  stringUtils.hpp
